--- a/CR API csharp wrapper/CR API csharp wrapper.csproj
+++ b/CR API csharp wrapper/CR API csharp wrapper.csproj
@@ -61,6 +61,8 @@
     <Compile Include="Player\PlayerShopOffers.cs" />
     <Compile Include="Player\PlayerStats.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TopClans.cs" />
+    <Compile Include="TopPlayers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
