--- a/CR API csharp wrapper/CR API csharp wrapper.csproj
+++ b/CR API csharp wrapper/CR API csharp wrapper.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="APIworker.cs" />
+    <Compile Include="Player\PlayerAchievement.cs" />
+    <Compile Include="Player\PlayerBattle.cs" />
+    <Compile Include="Wrapper.cs" />
     <Compile Include="Arena.cs" />
     <Compile Include="Card.cs" />
     <Compile Include="Clan\Clan.cs" />
@@ -51,11 +53,9 @@
     <Compile Include="Clan\ClanChest.cs" />
     <Compile Include="Clan\ClanPlayer.cs" />
     <Compile Include="Clan\ClanRegion.cs" />
-    <Compile Include="ClashRoyale.cs" />
     <Compile Include="Player\Player.cs" />
     <Compile Include="Player\PlayerChestCycle.cs" />
     <Compile Include="Player\PlayerClan.cs" />
-    <Compile Include="Player\PlayerExperience.cs" />
     <Compile Include="Player\PlayerGames.cs" />
     <Compile Include="Player\PlayerSeason.cs" />
     <Compile Include="Player\PlayerShopOffers.cs" />
