--- a/CR API csharp wrapper/CR API csharp wrapper.csproj
+++ b/CR API csharp wrapper/CR API csharp wrapper.csproj
@@ -46,16 +46,17 @@
     <Compile Include="Player\LeagueStatistics.cs" />
     <Compile Include="Player\PlayerAchievement.cs" />
     <Compile Include="Player\PlayerBattle.cs" />
+    <Compile Include="Tournament\Tournament.cs" />
     <Compile Include="Wrapper.cs" />
     <Compile Include="Arena.cs" />
     <Compile Include="Card.cs" />
     <Compile Include="Clan\Clan.cs" />
     <Compile Include="Clan\ClanBadge.cs" />
-    <Compile Include="Clan\SimplifiedPlayer.cs" />
+    <Compile Include="Player\SimplifiedPlayer.cs" />
     <Compile Include="Clan\ClanRegion.cs" />
     <Compile Include="Player\Player.cs" />
     <Compile Include="Player\PlayerChestCycle.cs" />
-    <Compile Include="Player\SimplifiedClan.cs" />
+    <Compile Include="Clan\SimplifiedClan.cs" />
     <Compile Include="Player\PlayerGames.cs" />
     <Compile Include="Player\PlayerSeason.cs" />
     <Compile Include="Player\PlayerShopOffers.cs" />
